use of lualatex

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -1,3 +1,4 @@
+%!TEX program = lualatex
 %
 % Main document
 % ===========================================================================
@@ -27,7 +28,7 @@
 \usepackage[ngerman,english]{babel}										% english hyphenation
 %\usepackage[latin1]{inputenc}  							% Unix/Linux - load extended character set (ISO 8859-1)
 \usepackage[ansinew]{inputenc}  							% Windows - load extended character set (ISO 8859-1)
-\usepackage[T1]{fontenc}											% hyphenation of words with ä,ö and ü
+\usepackage[T1]{fontenc}											% hyphenation of words with Ã¤, Ã¶ and Ã¼
 \usepackage{textcomp}													% additional symbols
 \usepackage{ae}																% better resolution of Type1-Fonts 
 \usepackage{fancyhdr}													% simple manipulation of header and footer 
@@ -74,7 +75,7 @@
 	hypertexnames = {true},               % no failures "same page(i)"
 	bookmarksopen = {true},               % opens the bar on the left side
 	bookmarksopenlevel = {0},             % depth of opened bookmarks
-	pdftitle = {Template für Bachelor Thesis},	   	% PDF-property
+	pdftitle = {Template fÃ¼r Bachelor Thesis},	   	% PDF-property
 	pdfauthor = {brd3},        					  % PDF-property
 	pdfsubject = {LaTeX Template},        % PDF-property
 	linkcolor = {linkcolor},              % Color of Links
@@ -182,7 +183,7 @@
 \include{chapters/conclusions}
 %---------------------------------------------------------------------------
 
-% Selbständigkeitserklärung
+% SelbstÃ¤ndigkeitserklÃ¤rung
 %---------------------------------------------------------------------------
 \cleardoublepage
 \phantomsection 
