Added section Formal verification.

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -27,7 +27,7 @@
 
 \usepackage[ngerman,english]{babel}										% english hyphenation
 %\usepackage[latin1]{inputenc}  							% Unix/Linux - load extended character set (ISO 8859-1)
-\usepackage[ansinew]{inputenc}  							% Windows - load extended character set (ISO 8859-1)
+%\usepackage[ansinew]{inputenc}  							% Windows - load extended character set (ISO 8859-1)
 \usepackage[T1]{fontenc}											% hyphenation of words with ä, ö and ü
 \usepackage{textcomp}													% additional symbols
 \usepackage{ae}																% better resolution of Type1-Fonts 
@@ -75,7 +75,8 @@
 	hypertexnames = {true},               % no failures "same page(i)"
 	bookmarksopen = {true},               % opens the bar on the left side
 	bookmarksopenlevel = {0},             % depth of opened bookmarks
-	pdftitle = {Template für Bachelor Thesis},	   	% PDF-property
+	bookmarksopenlevel = {0},             % depth of opened bookmarks
+	pdftitle = {Template fuer Bachelor Thesis},	   	% PDF-property
 	pdfauthor = {brd3},        					  % PDF-property
 	pdfsubject = {LaTeX Template},        % PDF-property
 	linkcolor = {linkcolor},              % Color of Links
