--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -5,9 +5,14 @@
 % Authors: brd3
 %
 
+@booklet{sanghavi:formal_verification,
+  author = {Alok Sanghave},
+  title = {What is formal verification?},
+}
+
 @book{kopka:band1,
 	author = {Helmut Kopka},
-	title = {\LaTeX, Band 1: Eine Einführung},
+	title = {\LaTeX, Band 1: Eine Einfï¿½hrung},
 	publisher = {Pearson Studium},
 	journal = {Operations Research},
 	volume = {3},
@@ -16,7 +21,7 @@
 }
 
 @booklet{raichle:bibtex_programmierung,
-  title = {Einführung in die {BibTeX}-{P}rogrammierung},
+  title = {Einfï¿½hrung in die {BibTeX}-{P}rogrammierung},
   author = {Bernd Raichle},
   year = {2002},
   institution = {DANTE},
@@ -43,7 +48,7 @@
 
 @booklet{Marti06,
 		author = {Fausi Marti},
-		title = {Schreiben über {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
+		title = {Schreiben ï¿½ber {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
 		publisher = {Fausi Marti -- BFH},
 		year = {2006},
 		organization = {Berner Fachhochschule}
@@ -58,14 +63,14 @@
 }
 
 @booklet{juergens:einfuehrung,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- eine {E}inführung und ein bisschen mehr...},
+    author = {Manuela Jï¿½rgens},
+    title = {LaTeX -- eine {E}infï¿½hrung und ein bisschen mehr...},
     year = {2000},
     url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml},
 }
 
 @booklet{juergens:fortgeschritten,
-    author = {Manuela Jürgens},
+    author = {Manuela Jï¿½rgens},
     title = {LaTeX -- {F}ortgeschrittene {A}nwendungen},
     year = {1995},
     url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml},
