--- a/doc/template.tex
+++ b/doc/template.tex
@@ -179,9 +179,12 @@
 \pagenumbering{arabic}
 
 \include{chapters/introduction}
-\include{chapters/instructions}
-\include{chapters/typeareatest}
+\include{chapters/research_stainless}
+\include{chapters/research_bitcoins}
+\include{chapters/connecting}
+\include{chapters/result}
 \include{chapters/conclusions}
+\include{chapters/future_work}
 %---------------------------------------------------------------------------
 
 % Selbständigkeitserklärung
