management summary -> abstract

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -163,8 +163,8 @@
 \setcounter{page}{1}
 \cleardoublepage
 \phantomsection 
-\addcontentsline{toc}{chapter}{Management Summary}
-\include{leader/management_summary}
+\addcontentsline{toc}{chapter}{Abstract}
+\include{leader/abstract}
 \cleardoubleemptypage
 %---------------------------------------------------------------------------
 
