changed top level titles

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -179,12 +179,10 @@
 \pagenumbering{arabic}
 
 \include{chapters/introduction}
-\include{chapters/research_stainless}
-\include{chapters/research_bitcoins}
-\include{chapters/connecting}
-\include{chapters/result}
-\include{chapters/conclusions}
-\include{chapters/future_work}
+\include{chapters/using_stainless}
+\include{chapters/using_bitcoins}
+\include{chapters/towards_verifying}
+\include{chapters/conclusion}
 %---------------------------------------------------------------------------
 
 % Selbständigkeitserklärung
