--- a/doc/leader/title.tex
+++ b/doc/leader/title.tex
@@ -1,1 +1,1 @@
-\providecommand{\heading}{Title of Thesis}		%  Insert Title of Thesis here
+\providecommand{\heading}{Experiments with Formal Verification of Scala Code @TODO ok?}		%  Insert Title of Thesis here
