added scala highlighting

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -38,6 +38,9 @@
 \usepackage{caption}													% for captions of figures and tables
 \usepackage{booktabs}													% package for nicer tables
 \usepackage{tocvsec2}													% provides means of controlling the sectional numbering
+\usepackage{dirtree}
+\usepackage{listings}
+\input{scala-highlighting.tex}
 %---------------------------------------------------------------------------
 
 % Load Math Packages
