changed ToC depth

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -134,7 +134,7 @@
 % Intro:
 %---------------------------------------------------------------------------
 \begin{document}                              	% Start Document
-\settocdepth{section}														% Set depth of toc
+\settocdepth{subsection}														% Set depth of toc
 \pagenumbering{roman}														
 %---------------------------------------------------------------------------
 
