--- a/doc/scala-highlighting.tex
+++ b/doc/scala-highlighting.tex
@@ -1,6 +1,13 @@
-\RequirePackage{color}
+\usepackage{listings, color}
 
-\lstdefinestyle{myScalastyle}{
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{
   language=scala,
-  keywordstyle=\color{blue}
+  basicstyle=\footnotesize,
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve}
 }
