Updated chapter Stainless in introduction.tex

--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -11,8 +11,18 @@
 }
 
 @misc{Stainless,
-  title = {{Stainless Documentation}},
-  url = {https://epfl-lara.github.io/stainless/},
+  title = {{Stainless Official Website}},
+  url = {http://stainless.epfl.ch/},
+}
+
+@misc{Stainless:introduction,
+  title = {{Stainless Documentation - Introduction}},
+  url = {https://epfl-lara.github.io/stainless/intro.html}
+}
+
+@misc{Stainless:tutorial,
+  title = {{Stainless Documentation - Tutorial: sorting}},
+  url = {https://epfl-lara.github.io/stainless/tutorial.html}
 }
 
 @book{kopka:band1,
