removed unused sections

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -201,14 +201,14 @@
 \include{leader/declaration_authorship}
 %---------------------------------------------------------------------------
 
-% Glossary
-%---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{Glossay}
-%\renewcommand{\glossaryname}{Glossay}
-\printglossary
-%---------------------------------------------------------------------------
+% % Glossary
+% %---------------------------------------------------------------------------
+% \cleardoublepage
+% \phantomsection
+% \addcontentsline{toc}{chapter}{Glossay}
+% %\renewcommand{\glossaryname}{Glossay}
+% \printglossary
+% %---------------------------------------------------------------------------
 
 % Bibliography
 %---------------------------------------------------------------------------
@@ -219,25 +219,25 @@
 \bibliography{database/bibliography}{}
 %---------------------------------------------------------------------------
 
-% Listings
-%---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{List of figures}
-\listoffigures
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{List fo tables}
-\listoftables
-%---------------------------------------------------------------------------
+% % Listings
+% %---------------------------------------------------------------------------
+% \cleardoublepage
+% \phantomsection
+% \addcontentsline{toc}{chapter}{List of figures}
+% \listoffigures
+% \cleardoublepage
+% \phantomsection
+% \addcontentsline{toc}{chapter}{List fo tables}
+% \listoftables
+% %---------------------------------------------------------------------------
 
-% Index
-%---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{Index}
-\printindex
-%---------------------------------------------------------------------------
+% % Index
+% %---------------------------------------------------------------------------
+% \cleardoublepage
+% \phantomsection
+% \addcontentsline{toc}{chapter}{Index}
+% \printindex
+% %---------------------------------------------------------------------------
 
 % Attachment:
 %---------------------------------------------------------------------------
