added hashtag command

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -46,6 +46,7 @@
 \usepackage{soul}
 \definecolor{lightgray}{rgb}{0.90, 0.90, 0.90}
 \newcommand{\code}[1][\sethlcolor{lightgray}\hl]{#1}
+\newcommand\mypound{\scalebox{0.8}{\raisebox{0.4ex}{\#}}}
 %---------------------------------------------------------------------------
 
 % Load Math Packages
