--- a/doc/template.tex
+++ b/doc/template.tex
@@ -191,6 +191,7 @@
 \include{chapters/using_stainless}
 \include{chapters/using_bitcoins}
 \include{chapters/towards_verifying}
+\include{chapters/towards_verifying_addition}
 \include{chapters/conclusion}
 %---------------------------------------------------------------------------
 
