End of Bincoin-S in introduction.tex

--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -25,6 +25,11 @@
   url = {https://epfl-lara.github.io/stainless/tutorial.html},
 }
 
+@misc{BitcoinSProject,
+  title = {{Bitcoin-S Project}},
+  url = {https://github.com/bitcoin-s},
+}
+
 @misc{BitcoinSCore:txbuilderexample,
   title = {{Transaction Builder Example}},
   url = {https://github.com/bitcoin-s/bitcoin-s/blob/master/docs/core/txbuilder.md},
