--- a/doc/leader/abstract.tex
+++ b/doc/leader/abstract.tex
@@ -1,4 +1,20 @@
 \chapter*{Abstract}
 \label{chap:abstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus scelerisque, leo sed iaculis ornare, mi leo semper urna, ac elementum libero est at risus. Donec eget aliquam urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fermentum nunc sollicitudin leo porttitor volutpat. Duis ac enim lectus, quis malesuada lectus. Aenean vestibulum suscipit justo, in suscipit augue venenatis a. Donec interdum nibh ligula. Aliquam vitae dui a odio cursus interdum quis vitae mi. Phasellus ornare tortor fringilla velit accumsan quis tincidunt magna eleifend. Praesent nisl nibh, cursus in mattis ac, ultrices ac nulla. Nulla ante urna, aliquet eu tempus ut, feugiat id nisl. Nunc sit amet mauris vitae turpis scelerisque mattis et sed metus. Aliquam interdum congue odio, sed semper elit ullamcorper vitae. Morbi orci elit, feugiat vel hendrerit nec, sollicitudin non massa. Quisque lacus metus, vulputate id ullamcorper id, consequat eget orci \nocite{kopka:band1} \nocite{Marti06}. 
+
+In this thesis some experiments with formal verification are performed and examined. 
+To this end, parts of the implementation of the Bitcoin protocol in Bitcoin-S are verified for correctness using the verification framework Stainless.
+
+In the first part the goal of the work is stated. 
+A brief overview of the main blocks of the study is given: concepts of formal verification, the verification framework Stainless and the Scala implementation of the Bitcoin protocol.
+
+Chapter 2 outlines the first practical steps of using Stainless. 
+The integration process of the Stainless framework into a Scala project is described, and some aspects of language compatibility are visited in detail.
+
+In chapter 3 the principle and process of transaction creation are demonstrated with Bitcoin-S.
+
+In chapter 4 the correctness of transaction verification in Bitcoin-S is examined. 
+The difficulties emerged during the integration of Bitcoin-S and Stainless are covered.
+
+Chapter 5 highlights the verification process of coin addition in Bitcoin-S using the Stainless framework.
+The challenges encountered and solutions found are described.
