--- a/doc/template.tex
+++ b/doc/template.tex
@@ -245,9 +245,12 @@
 %---------------------------------------------------------------------------
 \appendix
 \settocdepth{section}
+\chapter*{APPENDICES}
+\addcontentsline{toc}{chapter}{APPENDICES}
+\begingroup\let\clearpage\relax
 \include{appendix/appendixexemple}
-\include{appendix/appendixexempleB}
-\include{appendix/contentCDROM}
+%\include{appendix/appendixexempleB}
+%\include{appendix/contentCDROM}
 %---------------------------------------------------------------------------
 
 %---------------------------------------------------------------------------
