--- a/doc/leader/declaration_authorship.tex
+++ b/doc/leader/declaration_authorship.tex
@@ -3,13 +3,14 @@
 
 \vspace*{10mm} 
 
-I / We hereby confirm that I / we have written this thesis independently and without using other sources and resources than those specified in the bibliography. All text passages which were not written by me are marked as quotations and provided with the exact indication of its origin. 
+We hereby confirm that we have written this thesis independently and without using other sources and resources than those specified in the bibliography.
+All text passages which were not written by me are marked as quotations and provided with the exact indication of its origin. 
 
 \vspace{15mm}
 
 \begin{tabbing}
 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\kill
-Place, Date:		\> [Biel/Burgdorf], \versiondate \\ \\ 
-Last Name/s, First Name/s:	\> [Test Peter] 	\> [M\"uster R\"os\"a] \\ \\ \\ \\ 
-Signature/s:	\> ......................................\> ...................................... \\
+Place, Date:		\> Biel, \versiondate \\ \\ 
+Last Names, First Names:	\> Doukmak Anna 	\> Boss Ramon \\ \\ \\ \\ 
+Signatures:	\> ......................................\> ...................................... \\
 \end{tabbing}
