--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -24,6 +24,12 @@
   title = {{Stainless Documentation - Tutorial: sorting}},
   url = {https://epfl-lara.github.io/stainless/tutorial.html},
 }
+}
+
+@misc{Stainless:pure_scala,
+  title = {{Stainless Documentation - Pure Scala}},
+  url = {https://epfl-lara.github.io/stainless/purescala.html},
+}
 
 @misc{BitcoinSProject,
   title = {{Bitcoin-S Project}},
