Added Stainless library.

--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -31,6 +31,16 @@
   url = {https://epfl-lara.github.io/stainless/purescala.html},
 }
 
+@misc{Stainless:imperative,
+  title = {{Stainless Documentation - Imperative}},
+  url = {https://epfl-lara.github.io/stainless/imperative.html},
+}
+
+@misc{Stainless:library,
+  title = {{Stainless library}},
+  url = {https://epfl-lara.github.io/stainless/library.html}
+}
+
 @misc{BitcoinSProject,
   title = {{Bitcoin-S Project}},
   url = {https://github.com/bitcoin-s},
