Updated title page.

--- a/doc/leader/frontpage_with_picture.tex
+++ b/doc/leader/frontpage_with_picture.tex
@@ -66,9 +66,9 @@ The cover picture may be turned on or off in the lines 157/158 of the file templ
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
 Degree course:	\> Computer Science	\\		% insert name of degree course
 Authors:		\> Anna Doukmak, Ramon Boss		\\					% insert names
-Tutor:	\> Kai Brünnler // TODO Dr.?		\\							% insert names
+Tutor:	\> Prof. Dr. Kai Brünnler // TODO Dr.?		\\							% insert names
 %Constituent:	\> [Wwwww AG]					\\							% insert names
-Experts:		\> Urs Keller // TODO remove?				\\							% insert names
+External referee:		\> Urs Keller // TODO remove?				\\							% insert names
 Date:			\> \versiondate					\\							% read from file leader/version.tex
 \end{tabbing}
 
