updated front page

--- a/doc/template.tex
+++ b/doc/template.tex
@@ -165,8 +165,8 @@
 
 % Title Page and Abstract
 %---------------------------------------------------------------------------
-%\include{leader/frontpage_without_picture}		% activate for frontpage without picture
-\include{leader/frontpage_with_picture}		% activate for frontpage with picture
+\include{leader/frontpage_without_picture}		% activate for frontpage without picture
+% \include{leader/frontpage_with_picture}		% activate for frontpage with picture
 \include{leader/versions}
 \cleardoubleemptypage
 \setcounter{page}{1}
