--- a/doc/leader/frontpage_without_picture.tex
+++ b/doc/leader/frontpage_without_picture.tex
@@ -31,7 +31,7 @@ Place your subheading here 			\\				% Insert subheading
 \vspace{5mm}
 
 \fontsize{10pt}{12pt}\selectfont
-\textbf{Description of thesis (semester- / Bachelor thesis / etc.)} \\		% Insert text
+\textbf{Bachelor thesis} \\		% Insert text
 \vspace{7mm}
 
 % Abstract (eingeben):
@@ -47,11 +47,11 @@ The cover picture may be turned on or off in the lines 157/158 of the file templ
 \fontsize{10pt}{17pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-Degree course:	\> [z.B. Electrical and Communication Engineering]	\\		% insert name of degree course
-Authors:		\> [Test Peter, M\"uster R\"os\"a]		\\					% insert names
-Tutor:	\> [Dr.~Xxxx Xxxx, Dr.~Yyyy Yyyy]		\\							% insert names
-Constituent:	\> [Wwwww AG]					\\							% insert names
-Experts:		\> [Dr.~Zzzz Zzzz]				\\							% insert names
+Degree course:	\> Computer Science	\\		% insert name of degree course
+Authors:		\> Anna Doukmak, Ramon Boss		\\					% insert names
+Tutor:	\> Prof. Dr. Kai Brünnler		\\							% insert names
+%Constituent:	\> [Wwwww AG]					\\							% insert names
+%Expert:		\> [Dr.~Zzzz Zzzz]				\\							% insert names
 Date:			\> \versiondate					\\							% read from file leader/version.tex
 \end{tabbing}
 
