--- a/doc/template.tex
+++ b/doc/template.tex
@@ -167,7 +167,7 @@
 %---------------------------------------------------------------------------
 \include{leader/frontpage_without_picture}		% activate for frontpage without picture
 % \include{leader/frontpage_with_picture}		% activate for frontpage with picture
-\include{leader/versions}
+% \include{leader/versions}
 \cleardoubleemptypage
 \setcounter{page}{1}
 \cleardoublepage
