line number for scala

--- a/doc/scala-highlighting.tex
+++ b/doc/scala-highlighting.tex
@@ -9,5 +9,9 @@
   basicstyle=\footnotesize,
   keywordstyle=\color{blue},
   commentstyle=\color{dkgreen},
+  numbers=left,
+  %frame=single, % Border around box
+  numbersep=-5pt,
+  numberstyle=\color{gray},
   stringstyle=\color{mauve}
 }
