--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -11,38 +11,47 @@
 }
 
 @misc{Stainless,
-  title = {{Stainless Official Website}},
+  author = "{Stainless official website}",
   url = {http://stainless.epfl.ch/},
 }
 
 @misc{Stainless:introduction,
-  title = {{Stainless Documentation - Introduction}},
+  author = "{Stainless documentation}",
+  title = {{Introduction}},
   url = {https://epfl-lara.github.io/stainless/intro.html},
 }
 
 @misc{Stainless:tutorial,
-  title = {{Stainless Documentation - Tutorial: sorting}},
+  author = "{Stainless documentation}",
+  title = {{Tutorial: sorting}},
   url = {https://epfl-lara.github.io/stainless/tutorial.html},
 }
+
+@misc{Stainless:github,
+  author = "{Source code of Stainless}",
+  url = {https://github.com/epfl-lara/stainless},
 }
 
 @misc{Stainless:pure_scala,
-  title = {{Stainless Documentation - Pure Scala}},
+  author = "{Stainless documentation}",
+  title = {{Pure Scala}},
   url = {https://epfl-lara.github.io/stainless/purescala.html},
 }
 
 @misc{Stainless:imperative,
-  title = {{Stainless Documentation - Imperative}},
+  author = "{Stainless documentation}",
+  title = {{Imperative}},
   url = {https://epfl-lara.github.io/stainless/imperative.html},
 }
 
 @misc{Stainless:library,
+  author = "{Stainless documentation}",
   title = {{Stainless library}},
   url = {https://epfl-lara.github.io/stainless/library.html}
 }
 
 @misc{BitcoinSProject,
-  title = {{Bitcoin-S Project}},
+  author = "{Source code of Bitcoin-S}",
   url = {https://github.com/bitcoin-s},
 }
 
