--- a/doc/leader/abstract.tex
+++ b/doc/leader/abstract.tex
@@ -2,19 +2,33 @@
 \label{chap:abstract}
 
 
-In this thesis some experiments with formal verification are performed and examined. 
-To this end, parts of the implementation of the Bitcoin protocol in Bitcoin-S are verified for correctness using the verification framework Stainless.
+In this thesis we experiment in formal verification.
+To this end, we verify for correctnes a part of the implementation of the Bitcoin protocol in Bitcoin-S using the verification framework Stainless.
+During the work we have faced some challenges.
 
-In the first part the goal of the work is stated. 
-A brief overview of the main blocks of the study is given: concepts of formal verification, the verification framework Stainless and the Scala implementation of the Bitcoin protocol.
+First of all, we indentify a property of the Bitcoin protocol which we want to verify.
+Because of the found bug in the C++ implementation of Bitcoin Core, which allowed a non-coinbase transaction to generate new coins, this property has been chosen.
 
-Chapter 2 outlines the first practical steps of using Stainless. 
-The integration process of the Stainless framework into a Scala project is described, and some aspects of language compatibility are visited in detail.
+The first challenging step is to integrate Stainless into Bitcoin-S.
+The difference in the versions of the sbt framework and Scala used in Bitcoin-S and Stainless makes the integration process quite diffucult.
+Thus, we have extracted the classes implementing the property mentioned above from the subpackage Bitcoin-S-Core.
 
-In chapter 3 the principle and process of transaction creation are demonstrated with Bitcoin-S.
+To understand the building process of a transaction, we experiment with the transaction creation and validation implemented in Bitcoin-S-Core.
+Furthermore, we analyse function \textit{checkTransaction} which is important for the protection against the introduced missuse of the Bitcoin protocol.
 
-In chapter 4 the correctness of transaction verification in Bitcoin-S is examined. 
-The difficulties emerged during the integration of Bitcoin-S and Stainless are covered.
+The next challenging stage is to use Stainless for verification of this function.
+Because Stainless takes as an input the functional subset of Scala with some imperative features we have to reimplement the extracted code according to the rules of Stainless.
+All extracted classes consist of more than 1500 lines of code what takes too much time to rewrite it. 
+Not to mention, this is only a preparation phase towards verification and not verification itself.
+So, we have decided to verify another functionality implemented in the Bitcoin-S-Core package which requires the extraction of the smaller batch of classes.
+The coin addition seems to be a good candidate.
+The operation of the coin addition with zero should result to the same value of the coin.
+We rewrite the code of 2 classes implementing this functionality accoring to the functional style.
+Then we define a formal specification for the function of the addition and some other dependent functions.
 
-Chapter 5 highlights the verification process of coin addition in Bitcoin-S using the Stainless framework.
-The challenges encountered and solutions found are described.
+During this work, we have detected a bug in the function \textit{checkTransaction} in Bitcoin-S-Core which forbids one type of a valid transaction.
+We have fixed it, and our pull request has been merged to the Bitcoin-S project.
+Furthermore, we have verified the coin addition with zero using Stainless.
+The framework has reported the operation as valid.
+But we had to transform the original code too much. So that we cannot state that the code of Bitcoin-S has been successfully verified.
+
