added foot note

--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -59,3 +59,8 @@
   title = {{Transaction Builder Example}},
   url = {https://github.com/bitcoin-s/bitcoin-s/blob/master/docs/core/txbuilder.md},
 }
+
+@misc{cve201817144,
+  title = {{Bitcoin Core Bug CVE-2018–17144: An Analysis}}
+  url = {https://hackernoon.com/bitcoin-core-bug-cve-2018-17144-an-analysis-f80d9d373362}
+}
