--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -61,6 +61,6 @@
 }
 
 @misc{cve201817144,
-  title = {{Bitcoin Core Bug CVE-2018–17144: An Analysis}}
+  title = {{Bitcoin Core Bug CVE-2018–17144: An Analysis}},
   url = {https://hackernoon.com/bitcoin-core-bug-cve-2018-17144-an-analysis-f80d9d373362}
 }
