--- a/doc/appendix/appendixexemple.tex
+++ b/doc/appendix/appendixexemple.tex
@@ -75,4 +75,4 @@ So we were not able to change the code so Stainless would accept it.
 After running the JAR file on the code there were many errors as described in chapter \ref{chap:verify_add}.
 
 So the sbt plugin does not complain always but the JAR file did.
-The open issue \mypound484 on GitHub\footnote{https://github.com/epfl-lara/stainless/issues/484} might describe this error.
+The open issue \mypound484 on GitHub\footnote{url{https://github.com/epfl-lara/stainless/issues/484}} might describe this error.
