--- a/doc/template.tex
+++ b/doc/template.tex
@@ -244,7 +244,7 @@
 \appendix
 \settocdepth{section}
 \chapter*{APPENDICES}
-\addcontentsline{toc}{chapter}{APPENDICES}
+% \addcontentsline{toc}{chapter}{APPENDICES}
 \begingroup\let\clearpage\relax
 \include{appendix/appendixexemple}
 %\include{appendix/appendixexempleB}
