--- a/doc/leader/abstract.tex
+++ b/doc/leader/abstract.tex
@@ -3,7 +3,7 @@
 
 In this thesis we try to verify some properties of Bitcoin-S.
 
-First, we look at some theory about formal verification, Stainless -- a verification tool and Bitcoin-S.
+First, we look at some theory about formal verification, Stainless -- a verification tool and Bitcoin-S -- an open source implementation of the Bitcoin protocol.
 
 Then, we try to verify that a non-coinbase transaction should not generate new coins.
 We create a transaction and check it in Bitcoin-S.
