--- a/doc/appendix/appendixexemple.tex
+++ b/doc/appendix/appendixexemple.tex
@@ -1,3 +1,5 @@
+\addcontentsline{toc}{chapter}{APPENDICES}
+
 \chapter{Practical Challenges with Stainless}
 \label{chap:appendix_arb}
 \endgroup
@@ -5,7 +7,7 @@
 
 \section{Integration}
 
-During this work, Stainless bumped the sbt plugin from version 0.13.17 to 1.2.8 and Scala from 2.11.12 to 2.12.8.
+During this work, Stainless bumped the sbt plugin from version 0.13.17 to 1.2.8 and now supports also Scala 2.12.8 and prevoiusly 2.11.12.
 So this section might be out of date now.
 
 There are two ways to integrate Stainless in a Scala project, the Scala build tool (sbt) plugin or a command line tool.
