--- a/doc/template.tex
+++ b/doc/template.tex
@@ -190,6 +190,7 @@
 \include{chapters/introduction}
 \include{chapters/trying_verify_checktx}
 \include{chapters/towards_verifying_addition}
+\include{chapters/challenge_stainless}
 \include{chapters/conclusion}
 %---------------------------------------------------------------------------
 
@@ -241,14 +242,14 @@
 
 % Attachment:
 %---------------------------------------------------------------------------
-\appendix
-\settocdepth{section}
-\chapter*{APPENDICES}
-% \addcontentsline{toc}{chapter}{APPENDICES}
-\begingroup\let\clearpage\relax
-\include{appendix/appendixexemple}
-%\include{appendix/appendixexempleB}
-%\include{appendix/contentCDROM}
+% \appendix
+% \settocdepth{section}
+% \chapter*{APPENDICES}
+% % \addcontentsline{toc}{chapter}{APPENDICES}
+% \begingroup\let\clearpage\relax
+% \include{appendix/appendixexemple}
+% %\include{appendix/appendixexempleB}
+% %\include{appendix/contentCDROM}
 %---------------------------------------------------------------------------
 
 %---------------------------------------------------------------------------
