remover abstract from front page

--- a/doc/leader/frontpage_without_picture.tex
+++ b/doc/leader/frontpage_without_picture.tex
@@ -27,7 +27,7 @@
 \vspace{2mm}
 
 \fontsize{16pt}{24pt}\selectfont\vspace{0.3em}
-Place your subheading here 			\\				% Insert subheading
+% Place your subheading here 			\\				% Insert subheading
 \vspace{5mm}
 
 \fontsize{10pt}{12pt}\selectfont
@@ -37,10 +37,10 @@ Place your subheading here 			\\				% Insert subheading
 % Abstract (eingeben):
 %---------------------------------------------------------------------------
 \begin{textblock}{150}(28,100)
-\fontsize{10pt}{12pt}\selectfont
-[Insert short text (abstract) if desired] \\ 
-This document serves as a template for the compilation of reports according to the guidelines of the BFH. The template is written in LATEX and supports the automatic writing of various directories, references, indexing and glossaries. This small text is a summary of this document with a length of 4 to max. 8 lines. \\ 
-The cover picture may be turned on or off in the lines 157/158 of the file template.tex.
+% \fontsize{10pt}{12pt}\selectfont
+% [Insert short text (abstract) if desired] \\ 
+% This document serves as a template for the compilation of reports according to the guidelines of the BFH. The template is written in LATEX and supports the automatic writing of various directories, references, indexing and glossaries. This small text is a summary of this document with a length of 4 to max. 8 lines. \\ 
+% The cover picture may be turned on or off in the lines 157/158 of the file template.tex.
 \end{textblock}
 
 \begin{textblock}{150}(28,225)
