--- a/doc/database/bibliography.bib
+++ b/doc/database/bibliography.bib
@@ -5,49 +5,14 @@
 % Authors: brd3
 %
 
-@booklet{sanghavi:formal_verification,
-  author = {Alok Sanghave},
-  title = {What is formal verification?},
-}
-
-@misc{Stainless,
-  author = "{Stainless official website}",
-  url = {http://stainless.epfl.ch/},
-}
-
-@misc{Stainless:introduction,
+@misc{Stainless:documentation,
   author = "{Stainless documentation}",
-  title = {{Introduction}},
-  url = {https://epfl-lara.github.io/stainless/intro.html},
-}
-
-@misc{Stainless:tutorial,
-  author = "{Stainless documentation}",
-  title = {{Tutorial: sorting}},
-  url = {https://epfl-lara.github.io/stainless/tutorial.html},
+  url = {https://epfl-lara.github.io/stainless/},
 }
 
 @misc{Stainless:github,
   author = "{Source code of Stainless}",
   url = {https://github.com/epfl-lara/stainless},
-}
-
-@misc{Stainless:pure_scala,
-  author = "{Stainless documentation}",
-  title = {{Pure Scala}},
-  url = {https://epfl-lara.github.io/stainless/purescala.html},
-}
-
-@misc{Stainless:imperative,
-  author = "{Stainless documentation}",
-  title = {{Imperative}},
-  url = {https://epfl-lara.github.io/stainless/imperative.html},
-}
-
-@misc{Stainless:library,
-  author = "{Stainless documentation}",
-  title = {{Stainless library}},
-  url = {https://epfl-lara.github.io/stainless/library.html}
 }
 
 @misc{BitcoinSProject,
