--- a/doc/template.tex
+++ b/doc/template.tex
@@ -39,6 +39,7 @@
 \usepackage{booktabs}													% package for nicer tables
 \usepackage{tocvsec2}													% provides means of controlling the sectional numbering
 \usepackage{dirtree}
+\usepackage{nameref}
 
 \usepackage{listings}
 \input{scala-highlighting.tex}
