--- a/doc/leader/version.tex
+++ b/doc/leader/version.tex
@@ -1,2 +1,2 @@
 \providecommand{\versionnumber}{1.0}			%  Hier die aktuelle Versionsnummer eingeben
-\providecommand{\versiondate}{TODO fix this}		%  Hier das Datum der aktuellen Version eingeben
+\providecommand{\versiondate}{2019-06-13}		%  Hier das Datum der aktuellen Version eingeben
