--- a/doc/leader/abstract.tex
+++ b/doc/leader/abstract.tex
@@ -10,7 +10,7 @@ We create a transaction and check it in Bitcoin-S.
 After some time we realize that it is not possible with the current tools and the given time.
 But because we familiarized us with the Bitcoin-S code we find a bug and send a bug fix to the Bitcoin-S project.
 
-So we verify a less interesting property property of Bitcoin-S.
+So we verify a less interesting property of Bitcoin-S.
 There is a datatype Satoshis that represents bitcoins. We verify that the addition of Satoshis with zero results in the same amount of Satoshis.
 Even this needs many changes in the code that we go through step-by-step.
 
